# json-schema-validator

./: .clang-format  .gitignore  .gitmodules  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  BUILD  CMakeLists.txt  ChangeLog.md  README.md  WORKSPACE.bazel  conanfile.py  config.json  environment-dev.yml  json-schema-validatorConfig.cmake.in  nlohmann_json_schema_validatorConfig.cmake.in  pyproject.toml  test-schema.sh  test.sh  workspace.bzl
.distro/: .gitignore  json-schema-validator.spec  packit.toml
.distro/plans/: import.fmf  main.fmf.dist-git  rpm.fmf  rpmlint.fmf  smoke.fmf
.distro/tests/: rpmlint.fmf  smoke.fmf
.distro/tests/import/: main.fmf  test_FetchContent.sh  test_find_package.sh
.distro/tests/import/FetchContent/: CMakeLists.txt
.distro/tests/import/find_package/: CMakeLists.txt
.github/workflows/: github-actions.yml  release.yaml  test.yaml  windows.yaml
app/: format.cpp  json-schema-test.cpp  json-schema-validate.cpp  readme.cpp
cmake/: CMakePresets-CI.json  CMakePresets-defaults.json  config.cmake.in
docs/: CONTRIBUTING.md  changelog.md  conf.py  index.md  roadmap.md
docs/cmake/: advanced.md  index.md  options.md  presets.md
example/: CMakeLists.txt  README.md  format.cpp  readme.cpp  stand-alone.cpp
example/cmake-submodule/: CMakeLists.txt  validate.cpp
example/format/: CMakeLists.txt
example/readme/: CMakeLists.txt
example/validate/: CMakeLists.txt
json-schema-spec/: CMakeLists.txt  README.md
src/: BUILD  CMakeLists.txt  cli.cpp  json-patch.cpp  json-patch.hpp  json-schema-draft4.json.cpp  json-schema-draft_2020-12.json.cpp  json-schema-validator.hpp  json-schema-version.cpp.in  json-schema-version.hpp.in  json-schema.hpp  json-uri.cpp  json-validator.cpp  json_patch.cpp  json_patch.hpp  smtp-address-validator.cpp  smtp-address-validator.hpp  string-format-check.cpp  string-format-check.hpp
src/nlohmann/: json-schema-decl.hpp  json-schema.hpp  json-schema.hpp.in
test/: BUILD  CMakeLists.txt  binary-validation.cpp  errors.cpp  id-ref.cpp  id.schema.json  issue-105-verbose-combination-errors.cpp  issue-149-entry-selection.cpp  issue-189-default-values.cpp  issue-218.cpp  issue-228-if-default-values.cpp  issue-229-oneof-default-values.cpp  issue-232-patch-in-place.cpp  issue-243-root-default-values.cpp  issue-25-default-values.cpp  issue-255-error-message-limit-precision.cpp  issue-293.cpp  issue-70-root-schema-constructor.cpp  issue-70.cpp  issue-98.cpp  issue-null-values-in-object.cpp  issue-required-with-default.cpp  issue-xx.cpp  json-patch.cpp  read-only-values.cpp  string-format-check-test.cpp  test-pipe-in.sh  test.bzl  test_uri.cpp  uri.cpp  utils.cpp  utils.h
test/JSON-Schema-Test-Suite/: CMakeLists.txt  json-schema-test.cpp
test/JSON-Schema-Test-Suite/tests/draft4/: ref.json
test/JSON-Schema-Test-Suite/tests/draft7/: default.json  ref.json
test/JSON-Schema-Test-Suite/tests/draft7/optional/format/: uuid.json
test/JSON-Schema-Test-Suite/tests/draft_2020-12/: definitions.json  not.json  ref.json
test/cmake-install/: CMakeLists.txt  test.sh.in
test/cmake-install/project/: CMakeLists.txt
test/issue-100/: CMakeLists.txt  schema.json  test_issue.cpp
test/issue-101/: CMakeLists.txt  schema.json  test_issue.cpp
test/issue-12/: schema.json  test_issue.cpp
test/issue-143/: CMakeLists.txt  test_issue.cpp
test/issue-209/: color.schema.json  entities.schema.json  test_issue.cpp
test/issue-27/: CMakeLists.txt  test_issue.cpp
test/issue-303/: CMakeLists.txt  instance.json  schema.json
test/issue-311/: CMakeLists.txt  instance.json  schema.json
test/issue-48/: test_issue.cpp
test/issue-54/: test_issue.cpp
test/issue-75/: test_issue.cpp
test/issue-9/: bar.json  base.json  test_issue.cpp
test/issue-9/foo/: foo.json
test/issue-9/foo/baz/: baz.json
test/issue-9/foo/baz/qux/: qux.json
test/issue-93/: issue-93.cpp  test_issue.cpp
test/issue-96/: CMakeLists.txt  schema.json  test_issue.cpp
test/test_cmake_install/: CMakeLists.txt  test_cmake_install.sh.in
test/test_cmake_install/test_project/: CMakeLists.txt
